--- a/bmw_behav_prep.ipynb
+++ b/bmw_behav_prep.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "88ccc219",
    "metadata": {},
    "outputs": [
@@ -74,16 +74,15 @@
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'values'",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[32m/var/folders/5y/1pn48fgn7yb77gc17h_5jms80000gp/T/ipykernel_65167/425085120.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# load the behavioural dta of subject:\u001b[39;00m\n\u001b[32m      4\u001b[39m train = pd.read_table(os.path.join(train_behavDir, \u001b[33mf's{sn:02d}'\u001b[39m, \u001b[33mf'BimanualWrist_MR_{sn}.dat'\u001b[39m))\n\u001b[32m      5\u001b[39m fMRI = pd.read_table(os.path.join(fMRI_behavDir, \u001b[33mf's{sn:02d}'\u001b[39m, \u001b[33mf'BimanualWrist_MR_{sn}.dat'\u001b[39m))\n\u001b[32m      6\u001b[39m \n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m utils.dataset.subject_routine(sn, path, smooth_win_sz=\u001b[32m0\u001b[39m, fs=\u001b[32m200\u001b[39m)\n",
-      "\u001b[32m~/Desktop/Projects/bimanual_wrist/utils/dataset.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(sn, path, smooth_win_sz, fs)\u001b[39m\n\u001b[32m    183\u001b[39m \n\u001b[32m    184\u001b[39m             dEndRadius_L = C.dEndRadius_L\n\u001b[32m    185\u001b[39m             dEndRadius_R = C.dEndRadius_R\n\u001b[32m    186\u001b[39m \n\u001b[32m--> \u001b[39m\u001b[32m187\u001b[39m             \u001b[38;5;28;01mif\u001b[39;00m dEndRadius_L > \u001b[32m0\u001b[39m:\n\u001b[32m    188\u001b[39m                 tmp_idx = find_closest_index(trial_mov[:, \u001b[32m5\u001b[39m], dEndRadius_L)\n\u001b[32m    189\u001b[39m \n\u001b[32m    190\u001b[39m             \u001b[38;5;28;01mif\u001b[39;00m dEndRadius_R > \u001b[32m0\u001b[39m:\n",
-      "\u001b[32m~/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/site-packages/pandas/core/generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1575\u001b[39m     @final\n\u001b[32m   1576\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m __nonzero__(self) -> NoReturn:\n\u001b[32m-> \u001b[39m\u001b[32m1577\u001b[39m         raise ValueError(\n\u001b[32m   1578\u001b[39m             \u001b[33mf\"The truth value of a {type(self).__name__} is ambiguous. \"\u001b[39m\n\u001b[32m   1579\u001b[39m             \u001b[33m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[39m\n\u001b[32m   1580\u001b[39m         )\n",
-      "\u001b[31mValueError\u001b[39m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m train = pd.read_table(os.path.join(train_behavDir, \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33ms\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msn\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m02d\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m, \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mBimanualWrist_MR_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msn\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.dat\u001b[39m\u001b[33m'\u001b[39m))\n\u001b[32m      5\u001b[39m fMRI = pd.read_table(os.path.join(fMRI_behavDir, \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33ms\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msn\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m02d\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m, \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mBimanualWrist_MR_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msn\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.dat\u001b[39m\u001b[33m'\u001b[39m))\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[43mutils\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m.\u001b[49m\u001b[43msubject_routine\u001b[49m\u001b[43m(\u001b[49m\u001b[43msn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msmooth_win_sz\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfs\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m200\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projects/bimanual_wrist/utils/dataset.py:206\u001b[39m, in \u001b[36msubject_routine\u001b[39m\u001b[34m(sn, path, smooth_win_sz, fs)\u001b[39m\n\u001b[32m    201\u001b[39m \u001b[38;5;66;03m# Find pre_RT and post_RT indices:\u001b[39;00m\n\u001b[32m    202\u001b[39m \u001b[38;5;66;03m# MAY DEVELOP LATER.\u001b[39;00m\n\u001b[32m    203\u001b[39m \n\u001b[32m    204\u001b[39m \u001b[38;5;66;03m# Calculate mean deviation for the trial:\u001b[39;00m\n\u001b[32m    205\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m C.GoodMovement[\u001b[32m0\u001b[39m]:\n\u001b[32m--> \u001b[39m\u001b[32m206\u001b[39m     radius_l = trial_mov[:,\u001b[32m5\u001b[39m].flatten()[idx_gocue[i]:idx_endReach[i]]\n\u001b[32m    207\u001b[39m     radius_r = trial_mov[:,\u001b[32m6\u001b[39m].flatten()[idx_gocue[i]:idx_endReach[i]]\n\u001b[32m    208\u001b[39m     angle_l = trial_mov[:,\u001b[32m7\u001b[39m].flatten()[idx_gocue[i]:idx_endReach[i]]\n",
+      "\u001b[31mAttributeError\u001b[39m: 'numpy.ndarray' object has no attribute 'values'"
      ]
     }
    ],
@@ -104,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sn = 4\n",
+    "sn = 8\n",
     "D = pd.read_csv(os.path.join(anaDir, f'bmw_train_{sn}.csv'))\n",
     "D = D[D.GoodMovement == 1]\n",
     "D_mov = pd.read_csv(os.path.join(anaDir, f'bmw_train_{sn}_mov.csv'))\n",
@@ -124,14 +123,16 @@
     "    for i in range(len(BNs)):\n",
     "        BN = BNs[i]\n",
     "        TN = TNs[i]\n",
-    "\n",
+    "        idx_gocue = D.idx_gocue[(D.BN==BN) & (D.TN==TN)].values[0]\n",
+    "        idx_endReach = D.idx_endReach[(D.BN==BN) & (D.TN==TN)].values[0]\n",
+    "        \n",
     "        # kinematic traces:\n",
     "        trial_mov = D_mov[(D_mov.BN==BN) & (D_mov.TN==TN)]\n",
-    "        radius_l = trial_mov['mov_5'].values.flatten()\n",
-    "        radius_r = trial_mov['mov_6'].values.flatten()\n",
-    "        angle_l = trial_mov['mov_7'].values.flatten()\n",
-    "        angle_r = trial_mov['mov_8'].values.flatten()\n",
-    "\n",
+    "        radius_l = trial_mov['mov_5'].values.flatten()[idx_gocue:idx_endReach]\n",
+    "        radius_r = trial_mov['mov_6'].values.flatten()[idx_gocue:idx_endReach]\n",
+    "        angle_l = trial_mov['mov_7'].values.flatten()[idx_gocue:idx_endReach]\n",
+    "        angle_r = trial_mov['mov_8'].values.flatten()[idx_gocue:idx_endReach]\n",
+    "        \n",
     "        radius = 5\n",
     "        x_offset = radius+2\n",
     "        y_offset = 0\n",
