making summary dataframes

--- a/bmw_behav_prep.ipynb
+++ b/bmw_behav_prep.ipynb
@@ -84,60 +84,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "99a37b35",
+   "metadata": {},
+   "source": [
+    "## all dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "694f9ce7",
+   "id": "faa2fef4",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "sn = 8\n",
-    "D = pd.read_csv(os.path.join(anaDir, f'bmw_train_{sn}.csv'))\n",
-    "D = D[D.GoodMovement == 1]\n",
-    "D_mov = pd.read_csv(os.path.join(anaDir, f'bmw_train_{sn}_mov.csv'))\n",
-    "\n",
-    "# plot unimanual movements:\n",
-    "conds = D.cond_name.unique()\n",
-    "left_conds = [cond for cond in conds if 'left_' in cond]\n",
-    "right_conds = [cond for cond in conds if 'right_' in cond]\n",
-    "\n",
-    "for cond in conds:\n",
-    "    BNs = D.BN[D.cond_name==cond].values.flatten()\n",
-    "    TNs = D.TN[D.cond_name==cond].values.flatten()\n",
-    "    \n",
-    "    # plot kinematic traces for left and right hands:\n",
-    "    fix, ax = plt.subplots(figsize=(10, 5))\n",
-    "    utils.please.draw_board(ax=ax)\n",
-    "    for i in range(len(BNs)):\n",
-    "        BN = BNs[i]\n",
-    "        TN = TNs[i]\n",
-    "        idx_gocue = D.idx_gocue[(D.BN==BN) & (D.TN==TN)].values[0]\n",
-    "        idx_endReach = D.idx_endReach[(D.BN==BN) & (D.TN==TN)].values[0]\n",
-    "        \n",
-    "        # kinematic traces:\n",
-    "        trial_mov = D_mov[(D_mov.BN==BN) & (D_mov.TN==TN)]\n",
-    "        radius_l = trial_mov['mov_5'].values.flatten()[idx_gocue:idx_endReach]\n",
-    "        radius_r = trial_mov['mov_6'].values.flatten()[idx_gocue:idx_endReach]\n",
-    "        angle_l = trial_mov['mov_7'].values.flatten()[idx_gocue:idx_endReach]\n",
-    "        angle_r = trial_mov['mov_8'].values.flatten()[idx_gocue:idx_endReach]\n",
-    "        \n",
-    "        radius = 5\n",
-    "        x_offset = radius+2\n",
-    "        y_offset = 0\n",
-    "        x_l = radius_l * np.cos(np.deg2rad(angle_l)) - x_offset\n",
-    "        y_l = radius_l * np.sin(np.deg2rad(angle_l)) + y_offset\n",
-    "        x_r = radius_r * np.cos(np.deg2rad(angle_r)) + x_offset\n",
-    "        y_r = radius_r * np.sin(np.deg2rad(angle_r)) + y_offset\n",
-    "\n",
-    "        plt.plot(x_l, y_l, color='red', alpha=0.5)\n",
-    "        plt.plot(x_r, y_r, color='blue', alpha=0.5)\n",
-    "    plt.title(f'{cond}, subject {sn}')\n",
-    "    plt.xlabel('x')\n",
-    "    plt.ylabel('y')\n",
-    "    ax.set_xlim(-14, 14)\n",
-    "    ax.set_ylim(-7, 7)\n",
-    "    plt.savefig(os.path.join(figDir, 'behaviour', f'training_{sn}_{cond}.pdf'), bbox_inches=\"tight\")\n",
-    "    plt.close()\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
