--- a/bmw_behav_compare.ipynb
+++ b/bmw_behav_compare.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1c317828",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d62d6033",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
     "plt.title(f'MD - subject {sn}')\n",
     "utils.please.make_it_pretty(ax=ax)\n",
     "plt.show()\n",
-    "plt.savefig(os.path.join(figDir, 'behaviour', f'training_s{sn}_MD.pdf'), bbox_inches=\"tight\")"
+    "plt.savefig(os.path.join(figDir, 'behaviour', f'training_s{sn}_MD.pdf'), bbox_inches=\"tight\")\n"
    ]
   }
  ],
