compare reach cnds

--- a/bmw_behav_prep.ipynb
+++ b/bmw_behav_prep.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "84436d69",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "faa2fef4",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "75ef570d-6b10-4535-bb7f-87ebcb6daff4",
+       "ref": "e48afc01-babf-4f3d-8fd3-8a4c380c1ddd",
        "rows": [
         [
          "0",
@@ -1508,7 +1508,7 @@
        "[192 rows x 17 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,7 +1533,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".conda",
    "language": "python",
    "name": "python3"
   },
