--- a/bmw_behav_compare.ipynb
+++ b/bmw_behav_compare.ipynb
@@ -338,6 +338,16 @@
       "\n",
       "Setting a gradient palette using color= is deprecated and will be removed in v0.14.0. Set `palette='dark:k'` for the same effect.\n",
       "\n",
+      "  sns.boxplot(data=df, x=\"reach_type\", y=\"RT\", hue='Hand', width=0.3, fliersize=0, color='k', fill=False, order=['unimanual','mirror','matched','unrelated'])\n",
+      "/var/folders/nr/t5g2tr2x3rz2wtwsv95fhttm0000gn/T/ipykernel_45654/778365414.py:11: FutureWarning: \n",
+      "\n",
+      "Setting a gradient palette using color= is deprecated and will be removed in v0.14.0. Set `palette='dark:k'` for the same effect.\n",
+      "\n",
+      "  sns.boxplot(data=df, x=\"reach_type\", y=\"RT\", hue='Hand', width=0.3, fliersize=0, color='k', fill=False, order=['unimanual','mirror','matched','unrelated'])\n",
+      "/var/folders/nr/t5g2tr2x3rz2wtwsv95fhttm0000gn/T/ipykernel_45654/778365414.py:11: FutureWarning: \n",
+      "\n",
+      "Setting a gradient palette using color= is deprecated and will be removed in v0.14.0. Set `palette='dark:k'` for the same effect.\n",
+      "\n",
       "  sns.boxplot(data=df, x=\"reach_type\", y=\"RT\", hue='Hand', width=0.3, fliersize=0, color='k', fill=False, order=['unimanual','mirror','matched','unrelated'])\n"
      ]
     }
