--- a/bmw_timeseries.ipynb
+++ b/bmw_timeseries.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
     "        \n",
     "    fig.suptitle(f'Timelock to Exec, s{sn} glm{glm}')\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f'./figures/bmw_timelock_s{sn}_glm{glm}.pdf', bbox_inches=\"tight\")\n",
+    "    plt.savefig(f'./figures/time_series/bmw_timelock_s{sn}_glm{glm}.pdf', bbox_inches=\"tight\")\n",
     "    if cnt == 0:\n",
     "        plt.show()\n",
     "    else:\n",
