--- a/bmw_behav_compare.ipynb
+++ b/bmw_behav_compare.ipynb
@@ -59,12 +59,12 @@
    "id": "2a727f7c",
    "metadata": {},
    "source": [
-    "## Plot reaching trajectories for all conditions."
+    "## Plot reaching trajectories for all 48 conditions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1c317828",
    "metadata": {},
    "outputs": [
@@ -86,10 +86,10 @@
     }
    ],
    "source": [
-    "sn = 4\n",
-    "D = pd.read_csv(os.path.join(anaDir, f'bmw_train_{sn}.csv'))\n",
+    "sn = 101\n",
+    "D = pd.read_csv(os.path.join(anaDir, f's{sn}_train.csv'))\n",
     "D = D[D.GoodMovement == 1]\n",
-    "D_mov = pd.read_csv(os.path.join(anaDir, f'bmw_train_{sn}_mov.csv'))\n",
+    "D_mov = pd.read_csv(os.path.join(anaDir, f's{sn}_train_mov.csv'))\n",
     "\n",
     "conds = D.cond_name.unique()\n",
     "left_conds = [cond for cond in conds if 'left_' in cond]\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d62d6033",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
     "ana = pd.read_csv(os.path.join(anaDir, f'bmw.csv'))\n",
     "ana = ana[(ana.Uni_or_Bi==0)]\n",
     "\n",
-    "# make a vector of left vs right:\n",
+    "# left vs right:\n",
     "fig, ax = plt.subplots(figsize=(6, 3))\n",
     "sns.boxplot(data=ana, x=\"targetAngle_L\", y=\"RT\", hue=\"Hand\", width=0.5, fliersize=0)\n",
     "plt.title(f'RT')\n",
