--- a/bmw_timeseries.ipynb
+++ b/bmw_timeseries.ipynb
@@ -18,22 +18,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
+    "sys.path.append('/Users/aghavamp/Desktop/Projects/')\n",
+    "\n",
     "import scipy.io as sio\n",
     "import h5py\n",
     "import rsatoolbox as rsa\n",
     "from rsatoolbox.io import spm as spm_io\n",
     "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "import sys\n",
     "import getpass\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import surfAnalysisPy as surf\n",
-    "import SUITPy as suit\n",
     "import nibabel as nb\n",
     "import nitools as nt\n",
     "from matplotlib.cm import ScalarMappable\n",
