--- a/notebooks_mri/bmw_reliability.ipynb
+++ b/notebooks_mri/bmw_reliability.ipynb
@@ -2,16 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
+    "sys.path.append('/Users/aghavamp/Desktop/Projects')\n",
+    "sys.path.append('/Users/aghavamp/Desktop/Projects/Functional_Fusion')\n",
+    "import getpass\n",
+    "import importlib\n",
+    "\n",
     "import scipy.io as sio\n",
     "import rsatoolbox as rsa\n",
     "from rsatoolbox.io import spm as spm_io\n",
     "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "import sys\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import surfAnalysisPy as surf\n",
@@ -30,7 +35,7 @@
     "import matplotlib.patches as patches\n",
     "\n",
     "# SET PATHS:\n",
-    "baseDir = '/Users/alighavampour/Desktop/Projects/bimanual_wrist/data/fMRI'\n",
+    "baseDir = os.path.join('/Users', getpass.getuser(), 'Desktop', 'Projects', 'bimanual_wrist', 'data', 'fMRI')\n",
     "bidsDir = 'BIDS'\n",
     "anatomicalDir = 'anatomicals'\n",
     "freesurferDir = 'surfaceFreesurfer'\n",
