--- a/notebooks_mri/bmw_reliability.ipynb
+++ b/notebooks_mri/bmw_reliability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,14 +54,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting region S1 (1)\n",
+      "Extracting region S1 (1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/aghavamp/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/site-packages/nitools/volume.py:122: RuntimeWarning: divide by zero encountered in matmul\n",
+      "  ijk = mat[0:3,0:3] @ coords + mat[0:3,3:]\n",
+      "/Users/aghavamp/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/site-packages/nitools/volume.py:122: RuntimeWarning: overflow encountered in matmul\n",
+      "  ijk = mat[0:3,0:3] @ coords + mat[0:3,3:]\n",
+      "/Users/aghavamp/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/site-packages/nitools/volume.py:122: RuntimeWarning: invalid value encountered in matmul\n",
+      "  ijk = mat[0:3,0:3] @ coords + mat[0:3,3:]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Extracting region M1 (2)\n",
       "Extracting region PMd (3)\n",
       "Extracting region PMv (4)\n",
@@ -73,21 +91,21 @@
     }
    ],
    "source": [
-    "sn = 8\n",
+    "sn = 101\n",
     "glm = 3\n",
     "region_labels = [1, 2, 3, 4, 5, 6, 7, 8]\n",
     "region_names = ['S1', 'M1', 'PMd', 'PMv', 'SMA', 'V1', 'SPLa', 'SPLp']\n",
     "\n",
     "#  Define atlas map\n",
-    "white = os.path.join(baseDir, surfacewbDir, f's{sn:02d}', f's{sn:02d}.L.white.32k.surf.gii') # Individual white surface\n",
-    "pial = os.path.join(baseDir, surfacewbDir, f's{sn:02d}', f's{sn:02d}.L.pial.32k.surf.gii') # Invividual pial surface\n",
-    "mask = os.path.join(baseDir, f'glm{glm}', f's{sn:02d}', 'mask.nii') # Mask in functional space for that subject\n",
+    "white = os.path.join(baseDir, surfacewbDir, f's{sn}', f's{sn}.L.white.32k.surf.gii') # Individual white surface\n",
+    "pial = os.path.join(baseDir, surfacewbDir, f's{sn}', f's{sn}.L.pial.32k.surf.gii') # Invividual pial surface\n",
+    "mask = os.path.join(baseDir, f'glm{glm}', f's{sn}', 'mask.nii') # Mask in functional space for that subject\n",
     "\n",
     "# File names for data extraction\n",
-    "nii_names = sorted(glob.glob(os.path.join(baseDir, f'glm{glm}', f's{sn:02d}', \"beta_*.nii\")))\n",
+    "nii_names = sorted(glob.glob(os.path.join(baseDir, f'glm{glm}', f's{sn}', \"beta_*.nii\")))\n",
     "nii_names = nii_names[0:480] # remove the run constant regressors\n",
-    "resMS_name = [os.path.join(baseDir, f'glm{glm}', f's{sn:02d}', 'ResMS.nii')]\n",
-    "spmT_names = glob.glob(os.path.join(baseDir, f'glm{glm}', f's{sn:02d}', \"spmT*.nii\"))\n",
+    "resMS_name = [os.path.join(baseDir, f'glm{glm}', f's{sn}', 'ResMS.nii')]\n",
+    "spmT_names = glob.glob(os.path.join(baseDir, f'glm{glm}', f's{sn}', \"spmT*.nii\"))\n",
     "\n",
     "beta = []\n",
     "resMS = []\n",
@@ -111,7 +129,7 @@
     "    beta_white.append(beta[i]/np.sqrt(resMS[i]))\n",
     "    spmT.append(amap.extract_data_native(spmT_names))\n",
     "\n",
-    "regressor_info = pd.read_table(os.path.join(baseDir, f'glm{glm}', f's{sn:02d}', 'reginfo.tsv'))\n"
+    "regressor_info = pd.read_table(os.path.join(baseDir, f'glm{glm}', f's{sn}', 'reginfo.tsv'))\n"
    ]
   },
   {
