--- a/notebooks_mri/bmw_reliability.ipynb
+++ b/notebooks_mri/bmw_reliability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
     "    regressor_info = pd.read_table(os.path.join(baseDir, f'glm{glm}', f's{sn}', 'reginfo.tsv'))\n",
     "    partitions = regressor_info['run'].values.flatten()\n",
     "    conds = regressor_info['name'].values.flatten()\n",
-    "\n",
+    "    \n",
     "    for j, h in enumerate(hem):\n",
     "        # ========================================== \n",
     "        # DATA EXTRACTION \n",
@@ -350,6 +350,7 @@
     "            amap.save_as_image(os.path.join(baseDir, regDir, f's{sn}', f'amap_ROI_s{sn}_glm{glm}_{h}_{region_names[i]}.nii'))\n",
     "            \n",
     "            # This extract all the relevant voxels in native space (use for RSA)\n",
+    "            idx_nan = np.isnan(beta_white).any(axis=0)\n",
     "            beta = amap.extract_data_native(nii_names)\n",
     "            resMS = amap.extract_data_native(resMS_name)\n",
     "            beta_white = beta/np.sqrt(resMS)\n",
