--- a/notebooks_behav/bmw_MD.ipynb
+++ b/notebooks_behav/bmw_MD.ipynb
@@ -10,13 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "dd939188",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
+    "sys.path.append('/Users/aghavamp/Desktop/Projects/bimanual_wrist')\n",
     "from pathlib import Path\n",
     "import glob\n",
     "import getpass\n",
@@ -885,7 +886,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
