--- a/notebooks_mri/bmw_mvpa_uni_bi.ipynb
+++ b/notebooks_mri/bmw_mvpa_uni_bi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "1fdc37e8",
    "metadata": {},
    "outputs": [],
@@ -61,12 +61,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31a09a1c",
+   "metadata": {},
+   "source": [
+    "## Left hand reach in Right Hem"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d3fa6ca3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "glm = 1\n",
+    "region_labels = [1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "region_names = ['S1', 'M1', 'PMd', 'PMv', 'SMA', 'V1', 'SPLa', 'SPLp']\n",
+    "sn_list = [101,102,103,104,106,107,108,109,110,111,112,113,114,115]\n",
+    "hem = ['R']\n",
+    "atlas,_ = am.get_atlas('fs32k')\n",
+    "ana = {'sn':[], \n",
+    "       'hem':[],\n",
+    "       'region':[],\n",
+    "       'cond':[],\n",
+    "       'G_hat':[],\n",
+    "       'D':[]}\n",
+    "\n",
+    "for sn in sn_list:\n",
+    "    regressor_info = pd.read_table(os.path.join(baseDir, f'glm{glm}', f's{sn}', 'reginfo.tsv'))\n",
+    "    partitions = regressor_info['run'].values.flatten()\n",
+    "    conds = regressor_info['name'].values.flatten()\n",
+    "\n",
+    "    for j, h in enumerate(hem):\n",
+    "        # ==========================================\n",
+    "        # DATA EXTRACTION\n",
+    "        # ==========================================\n",
+    "        #  Define atlas map\n",
+    "        white = os.path.join(baseDir, surfacewbDir, f's{sn}', f's{sn}.{h}.white.32k.surf.gii') # Individual white surface\n",
+    "        pial = os.path.join(baseDir, surfacewbDir, f's{sn}', f's{sn}.{h}.pial.32k.surf.gii') # Invividual pial surface\n",
+    "        mask = os.path.join(baseDir, f'glm{glm}', f's{sn}', 'mask.nii') # Mask in functional space for that subject\n",
+    "\n",
+    "        # File names for data extraction\n",
+    "        nii_names = sorted(glob.glob(os.path.join(baseDir, f'glm{glm}', f's{sn}', \"beta_*.nii\")))\n",
+    "        nii_names = nii_names[0:480] # remove the run constant regressors\n",
+    "        resMS_name = [os.path.join(baseDir, f'glm{glm}', f's{sn}', 'ResMS.nii')]\n",
+    "        \n",
+    "        beta = []\n",
+    "        resMS = []\n",
+    "        beta_white = []\n",
+    "        for i, r in enumerate(region_labels):\n",
+    "            atlas_tmp = atlas.get_hemisphere(j)\n",
+    "            subatlas = atlas_tmp.get_subatlas_image(os.path.join(atlasDir,f'ROI.32k.{h}.label.gii'), value=r)\n",
+    "            amap = am.AtlasMapSurf(subatlas.vertex[0],white,pial,mask) # Atlas map\n",
+    "            # Compute the voxels in native space\n",
+    "            amap.build()\n",
+    "\n",
+    "            # This extract all the relevant voxels in native space (use for RSA)\n",
+    "            beta = amap.extract_data_native(nii_names)\n",
+    "            idx_nan = np.isnan(beta).any(axis=0)\n",
+    "            beta = beta[:, ~idx_nan]\n",
+    "            resMS = amap.extract_data_native(resMS_name)\n",
+    "            resMS = resMS[:, ~idx_nan]\n",
+    "            beta_white = beta/np.sqrt(resMS)\n",
+    "            \n",
+    "            # ========================================== \n",
+    "            # Estimated variance-covariance matrix\n",
+    "            # ==========================================\n",
+    "            cond_vec = []\n",
+    "            part_vec = []\n",
+    "            Y = []\n",
+    "            for angle in [0,60,120,180,240,300]:\n",
+    "                # unimanual:\n",
+    "                # idx += [(f'lhand:{angle}' in tmp) for tmp in conds]\n",
+    "\n",
+    "                # bimanual:\n",
+    "                # idx = np.zeros(len(conds), dtype=bool)\n",
+    "                idx = [(f'bi:{angle}' in tmp) for tmp in conds]\n",
+    "    \n",
+    "            Y = beta_white[idx,:]\n",
+    "            cond_vec = conds[idx]\n",
+    "            partition_vec = partitions[idx]\n",
+    "            G_hat,_ = pcm.est_G_crossval(Y,\n",
+    "                                         cond_vec,\n",
+    "                                         partition_vec,\n",
+    "                                         X=pcm.matrix.indicator(partition_vec))\n",
+    "            D = np.sign(pcm.G_to_dist(G_hat)) * np.sqrt(np.abs(pcm.G_to_dist(G_hat)))\n",
+    "            \n",
+    "            ana['sn'].append(sn)\n",
+    "            ana['hem'].append(h)\n",
+    "            ana['region'].append(region_names[i])\n",
+    "            ana['cond'].append(cond_vec)\n",
+    "\n",
+    "            # G_hat, indices = utils.please.matrix_to_vector(G_hat, include_diagonal=True)\n",
+    "            # D,_ = utils.please.matrix_to_vector(D, include_diagonal=True)\n",
+    "            # ana['row'] = indices[0]\n",
+    "            # ana['col'] = indices[1]\n",
+    "            ana['G_hat'].append(G_hat)\n",
+    "            ana['D'].append(D)\n",
+    "\n",
+    "ana = pd.DataFrame(ana)\n",
+    "# ana.to_csv(os.path.join(analysisDir,'G_uni.csv'), index=False)\n"
+   ]
   }
  ],
  "metadata": {
