--- a/notebooks_mri/bmw_mvpa_uni_bi.ipynb
+++ b/notebooks_mri/bmw_mvpa_uni_bi.ipynb
@@ -73,7 +73,23 @@
    "execution_count": null,
    "id": "d3fa6ca3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 44\u001b[39m\n\u001b[32m     41\u001b[39m amap.build()\n\u001b[32m     43\u001b[39m \u001b[38;5;66;03m# This extract all the relevant voxels in native space (use for RSA)\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m44\u001b[39m beta = \u001b[43mamap\u001b[49m\u001b[43m.\u001b[49m\u001b[43mextract_data_native\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnii_names\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     45\u001b[39m idx_nan = np.isnan(beta).any(axis=\u001b[32m0\u001b[39m)\n\u001b[32m     46\u001b[39m beta = beta[:, ~idx_nan]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projects/Functional_Fusion/Functional_Fusion/atlas_map.py:890\u001b[39m, in \u001b[36mAtlasMap.extract_data_native\u001b[39m\u001b[34m(self, images)\u001b[39m\n\u001b[32m    888\u001b[39m data = np.zeros((\u001b[38;5;28mlen\u001b[39m(vols), nvox))\n\u001b[32m    889\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m j, V \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(vols):\n\u001b[32m--> \u001b[39m\u001b[32m890\u001b[39m     X = \u001b[43mV\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_fdata\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    891\u001b[39m     X = X.ravel()\n\u001b[32m    892\u001b[39m     data[j,:] = X[vox] \u001b[38;5;66;03m# Get the data\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/site-packages/nibabel/dataobj_images.py:374\u001b[39m, in \u001b[36mDataobjImage.get_fdata\u001b[39m\u001b[34m(self, caching, dtype)\u001b[39m\n\u001b[32m    370\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._fdata_cache\n\u001b[32m    371\u001b[39m \u001b[38;5;66;03m# Always return requested data type\u001b[39;00m\n\u001b[32m    372\u001b[39m \u001b[38;5;66;03m# For array proxies, will attempt to confine data array to dtype\u001b[39;00m\n\u001b[32m    373\u001b[39m \u001b[38;5;66;03m# during scaling\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m374\u001b[39m data = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43masanyarray\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_dataobj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    375\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m caching == \u001b[33m'\u001b[39m\u001b[33mfill\u001b[39m\u001b[33m'\u001b[39m:\n\u001b[32m    376\u001b[39m     \u001b[38;5;28mself\u001b[39m._fdata_cache = data\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/site-packages/nibabel/arrayproxy.py:454\u001b[39m, in \u001b[36mArrayProxy.__array__\u001b[39m\u001b[34m(self, dtype)\u001b[39m\n\u001b[32m    433\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__array__\u001b[39m(\u001b[38;5;28mself\u001b[39m, dtype=\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m    434\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Read data from file and apply scaling, casting to ``dtype``\u001b[39;00m\n\u001b[32m    435\u001b[39m \n\u001b[32m    436\u001b[39m \u001b[33;03m    If ``dtype`` is unspecified, the dtype of the returned array is the\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    452\u001b[39m \u001b[33;03m        Scaled image data with type `dtype`.\u001b[39;00m\n\u001b[32m    453\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m454\u001b[39m     arr = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_scaled\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mslicer\u001b[49m\u001b[43m=\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    455\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    456\u001b[39m         arr = arr.astype(dtype, copy=\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/site-packages/nibabel/arrayproxy.py:423\u001b[39m, in \u001b[36mArrayProxy._get_scaled\u001b[39m\u001b[34m(self, dtype, slicer)\u001b[39m\n\u001b[32m    421\u001b[39m scaled = apply_read_scaling(\u001b[38;5;28mself\u001b[39m._get_unscaled(slicer=slicer), scl_slope, scl_inter)\n\u001b[32m    422\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m423\u001b[39m     scaled = \u001b[43mscaled\u001b[49m\u001b[43m.\u001b[49m\u001b[43mastype\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpromote_types\u001b[49m\u001b[43m(\u001b[49m\u001b[43mscaled\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m    424\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m scaled\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
     "glm = 1\n",
     "region_labels = [1, 2, 3, 4, 5, 6, 7, 8]\n",
@@ -138,6 +154,9 @@
     "                # bimanual:\n",
     "                # idx = np.zeros(len(conds), dtype=bool)\n",
     "                idx = [(f'bi:{angle}' in tmp) for tmp in conds]\n",
+    "                part_tmp = partitions[idx]\n",
+    "                y_tmp = beta_white[idx,:]\n",
+    "                \n",
     "    \n",
     "            Y = beta_white[idx,:]\n",
     "            cond_vec = conds[idx]\n",
@@ -163,6 +182,14 @@
     "ana = pd.DataFrame(ana)\n",
     "# ana.to_csv(os.path.join(analysisDir,'G_uni.csv'), index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "343b44cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
