--- a/notebooks_mri/bmw_mvpa_uni_bi.ipynb
+++ b/notebooks_mri/bmw_mvpa_uni_bi.ipynb
@@ -75,18 +75,14 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for &: 'list' and 'list'",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 44\u001b[39m\n\u001b[32m     41\u001b[39m amap.build()\n\u001b[32m     43\u001b[39m \u001b[38;5;66;03m# This extract all the relevant voxels in native space (use for RSA)\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m44\u001b[39m beta = \u001b[43mamap\u001b[49m\u001b[43m.\u001b[49m\u001b[43mextract_data_native\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnii_names\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     45\u001b[39m idx_nan = np.isnan(beta).any(axis=\u001b[32m0\u001b[39m)\n\u001b[32m     46\u001b[39m beta = beta[:, ~idx_nan]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projects/Functional_Fusion/Functional_Fusion/atlas_map.py:890\u001b[39m, in \u001b[36mAtlasMap.extract_data_native\u001b[39m\u001b[34m(self, images)\u001b[39m\n\u001b[32m    888\u001b[39m data = np.zeros((\u001b[38;5;28mlen\u001b[39m(vols), nvox))\n\u001b[32m    889\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m j, V \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(vols):\n\u001b[32m--> \u001b[39m\u001b[32m890\u001b[39m     X = \u001b[43mV\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_fdata\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    891\u001b[39m     X = X.ravel()\n\u001b[32m    892\u001b[39m     data[j,:] = X[vox] \u001b[38;5;66;03m# Get the data\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/site-packages/nibabel/dataobj_images.py:374\u001b[39m, in \u001b[36mDataobjImage.get_fdata\u001b[39m\u001b[34m(self, caching, dtype)\u001b[39m\n\u001b[32m    370\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._fdata_cache\n\u001b[32m    371\u001b[39m \u001b[38;5;66;03m# Always return requested data type\u001b[39;00m\n\u001b[32m    372\u001b[39m \u001b[38;5;66;03m# For array proxies, will attempt to confine data array to dtype\u001b[39;00m\n\u001b[32m    373\u001b[39m \u001b[38;5;66;03m# during scaling\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m374\u001b[39m data = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43masanyarray\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_dataobj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    375\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m caching == \u001b[33m'\u001b[39m\u001b[33mfill\u001b[39m\u001b[33m'\u001b[39m:\n\u001b[32m    376\u001b[39m     \u001b[38;5;28mself\u001b[39m._fdata_cache = data\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/site-packages/nibabel/arrayproxy.py:454\u001b[39m, in \u001b[36mArrayProxy.__array__\u001b[39m\u001b[34m(self, dtype)\u001b[39m\n\u001b[32m    433\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__array__\u001b[39m(\u001b[38;5;28mself\u001b[39m, dtype=\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m    434\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Read data from file and apply scaling, casting to ``dtype``\u001b[39;00m\n\u001b[32m    435\u001b[39m \n\u001b[32m    436\u001b[39m \u001b[33;03m    If ``dtype`` is unspecified, the dtype of the returned array is the\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    452\u001b[39m \u001b[33;03m        Scaled image data with type `dtype`.\u001b[39;00m\n\u001b[32m    453\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m454\u001b[39m     arr = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_scaled\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mslicer\u001b[49m\u001b[43m=\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    455\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    456\u001b[39m         arr = arr.astype(dtype, copy=\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/site-packages/nibabel/arrayproxy.py:423\u001b[39m, in \u001b[36mArrayProxy._get_scaled\u001b[39m\u001b[34m(self, dtype, slicer)\u001b[39m\n\u001b[32m    421\u001b[39m scaled = apply_read_scaling(\u001b[38;5;28mself\u001b[39m._get_unscaled(slicer=slicer), scl_slope, scl_inter)\n\u001b[32m    422\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m423\u001b[39m     scaled = \u001b[43mscaled\u001b[49m\u001b[43m.\u001b[49m\u001b[43mastype\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpromote_types\u001b[49m\u001b[43m(\u001b[49m\u001b[43mscaled\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m    424\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m scaled\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 68\u001b[39m\n\u001b[32m     64\u001b[39m \u001b[38;5;66;03m# bimanual:\u001b[39;00m\n\u001b[32m     65\u001b[39m \u001b[38;5;66;03m# idx = np.zeros(len(conds), dtype=bool)\u001b[39;00m\n\u001b[32m     67\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m1\u001b[39m,\u001b[32m11\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m68\u001b[39m     idx = \u001b[43m[\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43mf\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mbi:\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mangle\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[33;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtmp\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtmp\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mconds\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[43m&\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m(\u001b[49m\u001b[43mk\u001b[49m\u001b[43m \u001b[49m\u001b[43m==\u001b[49m\u001b[43m \u001b[49m\u001b[43mtmp\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtmp\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mpartitions\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m     69\u001b[39m     y_tmp = np.mean(beta_white[idx,:], axis=\u001b[32m0\u001b[39m)\n\u001b[32m     70\u001b[39m     Y = np.vstack((Y, y_tmp))\n",
+      "\u001b[31mTypeError\u001b[39m: unsupported operand type(s) for &: 'list' and 'list'"
      ]
     }
    ],
@@ -145,26 +141,35 @@
     "            # Estimated variance-covariance matrix\n",
     "            # ==========================================\n",
     "            cond_vec = []\n",
-    "            part_vec = []\n",
+    "            part_vec = np.array([], dtype=int)\n",
     "            Y = []\n",
     "            for angle in [0,60,120,180,240,300]:\n",
     "                # unimanual:\n",
-    "                # idx += [(f'lhand:{angle}' in tmp) for tmp in conds]\n",
+    "                idx = [(f'lhand:{angle}' in tmp) for tmp in conds]\n",
+    "                cond_vec.extend(conds[idx])\n",
+    "                part_vec = np.concatenate((part_vec,partitions[idx]))\n",
+    "                Y = np.vstack((Y, beta_white[idx,:])) if len(Y) else beta_white[idx,:]\n",
     "\n",
     "                # bimanual:\n",
     "                # idx = np.zeros(len(conds), dtype=bool)\n",
-    "                idx = [(f'bi:{angle}' in tmp) for tmp in conds]\n",
-    "                part_tmp = partitions[idx]\n",
-    "                y_tmp = beta_white[idx,:]\n",
     "                \n",
-    "    \n",
-    "            Y = beta_white[idx,:]\n",
-    "            cond_vec = conds[idx]\n",
-    "            partition_vec = partitions[idx]\n",
+    "                for k in range(1,11):\n",
+    "                    idx = [(f'bi:{angle}' in tmp) for tmp in conds & (k == tmp) for tmp in partitions] \n",
+    "                    y_tmp = np.mean(beta_white[idx,:], axis=0)\n",
+    "                    Y = np.vstack((Y, y_tmp))\n",
+    "                part_vec = np.concatenate((part_vec,np.arange(1,11)))\n",
+    "                cond_vec.extend([f'bi:{angle}'] * 10)\n",
+    "\n",
+    "                Y = np.vstack((Y, y_tmp))\n",
+    "            \n",
+    "            cond_vec = np.array(cond_vec)\n",
+    "            # Y = beta_white[idx,:]\n",
+    "            # cond_vec = conds[idx]\n",
+    "            # partition_vec = partitions[idx]\n",
     "            G_hat,_ = pcm.est_G_crossval(Y,\n",
     "                                         cond_vec,\n",
-    "                                         partition_vec,\n",
-    "                                         X=pcm.matrix.indicator(partition_vec))\n",
+    "                                         part_vec,\n",
+    "                                         X=pcm.matrix.indicator(part_vec))\n",
     "            D = np.sign(pcm.G_to_dist(G_hat)) * np.sqrt(np.abs(pcm.G_to_dist(G_hat)))\n",
     "            \n",
     "            ana['sn'].append(sn)\n",
