--- a/notebooks_mri/direction_encoding.ipynb
+++ b/notebooks_mri/direction_encoding.ipynb
@@ -179,8 +179,8 @@
    "source": [
     "df_lhand = pd.read_feather(os.path.join(analysisDir, 'G_left_uni.feather'))\n",
     "df_rhand = pd.read_feather(os.path.join(analysisDir, 'G_right_uni.feather'))\n",
-    "df_lbi = pd.\n",
-    "\n",
+    "df_lbi = pd.read_feather(os.path.join(analysisDir, 'G_uni_bi_left.feather'))\n",
+    "df_rbi = pd.read_feather(os.path.join(analysisDir, 'G_uni_bi_right.feather'))\n",
     "\n",
     "\n"
    ]
