--- a/notebooks_mri/univariate.ipynb
+++ b/notebooks_mri/univariate.ipynb
@@ -65,7 +65,10 @@
    "id": "ca68de18",
    "metadata": {},
    "source": [
-    "## AVG ACTIVATION"
+    "## AVG ACTIVATION\n",
+    "\n",
+    "1) mean beta (univariately whitened) in ipsilateral and contralateral hemespheres for left hand and right hand reaches.\n",
+    "2) bimanual mean beta vs unimanual"
    ]
   },
   {
@@ -199,14 +202,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cb4387a",
-   "metadata": {},
-   "source": [
-    "1) The ipsilateral activation is suppressed in unimanual conditions strongly in S1, M1, and I guess partially in other areas."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "24b65398",
    "metadata": {},
    "source": [
@@ -328,7 +323,9 @@
    "id": "cc86c203",
    "metadata": {},
    "source": [
-    "# UNI Straight vs Diagonal reach"
+    "## Uni Straight vs Non-straight reach\n",
+    "\n",
+    "Do non-straight reaches induce higher mean activity?"
    ]
   },
   {
@@ -377,7 +374,9 @@
    "id": "49fd4da5",
    "metadata": {},
    "source": [
-    "## BI Matched vs Mirr vs diagonal"
+    "## Bi Matched vs Mirr vs diagonal\n",
+    "\n",
+    "In unrelated angle bimanual conditions, is mean activity higher than mathced and mirror?"
    ]
   },
   {
